samples/_failures_safe/1761460486_f7b6a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_08736e0b.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_08736e0b.c:158:22: error: expected ‘)’ at end of input
  158 |             if (right
      |                ~     ^
      |                      )
./samples/SAFE/__tmp_08736e0b.c:158:13: error: expected declaration or statement at end of input
  158 |             if (right
      |             ^~
./samples/SAFE/__tmp_08736e0b.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_08736e0b.c:158:13: error: expected declaration or statement at end of input
